--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 rvm:
   - 1.8.7
   - 1.9.2
+  - 1.9.3
+  - ruby-head
   - ree
-  - rbx
-  - jruby
+  #- jruby-18mode
+  #- jruby-19mode
+  #- jruby-head
+  - rbx-18mode
+  - rbx-19mode
