--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,18 @@ language: ruby
 bundler_args: --without development
 rvm:
   - 1.8.7
-  - 1.9.2
-  - 1.9.3
-  - ruby-head
   - ree
+  - 1.9.3
+  - 2.0.0
+  - ruby-head
   - jruby-18mode
   - jruby-19mode
   - jruby-head
   - rbx-18mode
   - rbx-19mode
+  - rbx-head
 matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
+    - rvm: rbx-head
