--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 pkg/*
 *.gem
 .bundle
-Gemfile.lock
-*.rbc
-tmp/*
-*.swp
-.rvmrc
-
-## MAC OS
 .DS_Store
-.Trashes
-.com.apple.timemachine.supported
-.fseventsd
-Desktop DB
-Desktop DF
-
+.rvmrc
+.rbx/*
+Gemfile.lock
+coverage/
