Test for 2.1 compatibility since it's "due soon."

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ rvm:
   - 2.0.0
   - jruby-19mode
   - rbx
+  - 2.1.0-preview2
 matrix:
   allow_failures:
     - rvm: jruby-19mode
     - rvm: rbx
+    - rvm: 2.1.0-preview2
 notifications:
   recipients:
     - thibaud@thibaud.me
