--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ rvm:
   - 2.1.0
   - jruby-19mode
   - rbx
+gemfile:
+  - gemfiles/Gemfile.rspec-2.14
+  - gemfiles/Gemfile.rspec-3.0
 matrix:
   allow_failures:
     - rvm: jruby-19mode
