add gemfile for RSpec 2.99

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ rvm:
   - rbx
 gemfile:
   - gemfiles/Gemfile.rspec-2.14
+  - gemfiles/Gemfile.rspec-2.99
   - gemfiles/Gemfile.rspec-3.0
 matrix:
   allow_failures:
