--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 bundler_args: --without tool
 rvm:
   - 2.2.2
-  - jruby-19mode
+  - jruby-head
   - rbx
 gemfile:
   - gemfiles/Gemfile.rspec-2.14
@@ -10,6 +10,5 @@ gemfile:
   - gemfiles/Gemfile.rspec-3.3
 matrix:
   allow_failures:
-    - rvm: jruby-19mode
     - rvm: rbx
-    - rvm: 1.9.3
+    - rvm: jruby-head
